kubernetes/step9/api-gateway-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-clusterip
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 8180
      targetPort: 8080
