kubernetes/step9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api-gateway(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway-clusterip
                port:
                  number: 8180
          - path: /identity(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 8181
          - path: /naming(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: naming-clusterip
                port:
                  number: 8182
